deploy.yaml
#  ####   ######   ####   #####   ######   #####   ####
# #       #       #    #  #    #  #          #    #
#  ####   #####   #       #    #  #####      #     ####
#      #  #       #       #####   #          #         #
# #    #  #       #    #  #   #   #          #    #    #
#  ####   ######   ####   #    #  ######     #     ####

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ${K8S_RESOURCE_PREFIX}postgres
  name: ${K8S_RESOURCE_PREFIX}postgres
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: ${K8S_RESOURCE_PREFIX}postgres
  template:
    metadata:
      labels:
        app: ${K8S_RESOURCE_PREFIX}postgres
    spec:
      containers:
        - image: postgres:13-alpine
          name: ${K8S_RESOURCE_PREFIX}postgres
          securityContext:
            runAsUser: 65534
            runAsGroup: 65534
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: ${K8S_RESOURCE_PREFIX}postgres-data
      volumes:
        - name: ${K8S_RESOURCE_PREFIX}postgres-data
          persistentVolumeClaim:
            claimName: ${K8S_RESOURCE_PREFIX}postgres-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ${K8S_RESOURCE_PREFIX}mattermost
  name: ${K8S_RESOURCE_PREFIX}mattermost
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: ${K8S_RESOURCE_PREFIX}mattermost
  template:
    metadata:
      labels:
        app: ${K8S_RESOURCE_PREFIX}mattermost
    spec:
      containers:
        - image: mattermost/mattermost-team-edition:release-7.4
          name: ${K8S_RESOURCE_PREFIX}mattermost
          volumeMounts:
            - mountPath: "/mattermost/config"
              name: ${K8S_RESOURCE_PREFIX}mattermost-config
            - mountPath: "/mattermost/data"
              name: ${K8S_RESOURCE_PREFIX}mattermost-data
            - mountPath: "/mattermost/plugins"
              name: ${K8S_RESOURCE_PREFIX}mattermost-plugins
            - mountPath: "/mattermost/client/plugins"
              name: ${K8S_RESOURCE_PREFIX}mattermost-client-plugins
            - mountPath: "/mattermost/bleve-indexes"
              name: ${K8S_RESOURCE_PREFIX}mattermost-bleve-indexes
            - mountPath: "/mattermost/logs"
              name: ${K8S_RESOURCE_PREFIX}mattermost-logs
      volumes:
        - name: ${K8S_RESOURCE_PREFIX}mattermost-config
          persistentVolumeClaim:
            claimName: ${K8S_RESOURCE_PREFIX}mattermost-config
        - name: ${K8S_RESOURCE_PREFIX}mattermost-data
          persistentVolumeClaim:
            claimName: ${K8S_RESOURCE_PREFIX}mattermost-data
        - name: ${K8S_RESOURCE_PREFIX}mattermost-plugins
          persistentVolumeClaim:
            claimName: ${K8S_RESOURCE_PREFIX}mattermost-plugins
        - name: ${K8S_RESOURCE_PREFIX}mattermost-client-plugins
          persistentVolumeClaim:
            claimName: ${K8S_RESOURCE_PREFIX}mattermost-client-plugins
        - name: ${K8S_RESOURCE_PREFIX}mattermost-bleve-indexes
          persistentVolumeClaim:
            claimName: ${K8S_RESOURCE_PREFIX}mattermost-bleve-indexes
        - name: ${K8S_RESOURCE_PREFIX}mattermost-logs
          emptyDir: {}


#  ####   ######  #####   #    #     #     ####   ######   ####
# #       #       #    #  #    #     #    #    #  #       #
#  ####   #####   #    #  #    #     #    #       #####    ####
#      #  #       #####   #    #     #    #       #            #
# #    #  #       #   #    #  #      #    #    #  #       #    #
#  ####   ######  #    #    ##       #     ####   ######   ####

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${K8S_RESOURCE_PREFIX}postgres
  name: ${K8S_RESOURCE_PREFIX}postgres
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: ${K8S_RESOURCE_PREFIX}postgres
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${K8S_RESOURCE_PREFIX}mattermost
  name: ${K8S_RESOURCE_PREFIX}mattermost
spec:
  ports:
    - port: 8065
      protocol: TCP
      targetPort: 8065
  selector:
    app: ${K8S_RESOURCE_PREFIX}mattermost
  type: ClusterIP


#    #    #   ####   #####   ######   ####    ####
#    ##   #  #    #  #    #  #       #       #
#    # #  #  #       #    #  #####    ####    ####
#    #  # #  #  ###  #####   #            #       #
#    #   ##  #    #  #   #   #       #    #  #    #
#    #    #   ####   #    #  ######   ####    ####

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${K8S_RESOURCE_PREFIX}mattermost
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: ${LETSENCRYPT_ISSUER}
spec:
  tls:
    - hosts:
        - ${DEPLOYMENT_URL}
      secretName: ${DEPLOYMENT_URL}
  rules:
    - host: ${DEPLOYMENT_URL}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${K8S_RESOURCE_PREFIX}mattermost
                port:
                  number: 8065
